Move around adherence logic to remove complexity

--- a/server/dashboard/templates/dashboard/index.html
+++ b/server/dashboard/templates/dashboard/index.html
@@ -33,17 +33,26 @@
     <table class='table table-striped table-bordered table-hover'>
         <thead class="thead-dark">
             <tr>
+                <th colspan="6">Participant</td>
+                <th colspan="4">Fitbit</td>
+                <th colspan="2">Mobile App</th>
+                <th colspan="2">Watch App</th>
+            </tr>
+            <tr>
                 <th scope='col'>ID</th>
-                <th scope='col'>Token & Birth Year</th>
-                <th scope='col'>Active</th>
-                <th scope='col'>Enrolled</th>
-                <th scope='col'>Fitbit Days Worn</th>
-                <th scope='col'>Fitbit Authorized</th>
-                <th scope='col'>Watch App Installed</th>
-                <th scope='col'>Last WatchApp Data</th>
-                <th scope='col'>Last Fitbit Sync</th>
-                <th scope='col'>Last Page View</th>
+                <th scope='col'>Token</th>
+                <th scope="col">Birth Year</th>
                 <th scope='col'>Phone</th>
+                <th scope='col'>Active</th>
+                <th scope='col'>Joined</th>
+                <th scope='col'>Fitbit Authorized</th>
+                <th scope="col">Fitbit First Update</th>
+                <th scope='col'>Fitbit Last Update</th>
+                <th scope='col'>Fitbit Days Worn</th>
+                <th scope="col">Installed</th>
+                <th scope='col'>Last Page View</th>
+                <th scope='col'>Installed</th>
+                <th scope='col'>Last Update</th>
             </tr>
         </thead>
         <tbody>
@@ -53,9 +62,12 @@
                 {% timezone 'US/Pacific' %}
                 <td>{{participant.heartsteps_id}}</td>
                 <td>
-                    {{participant.enrollment_token}}<br />
+                    {{participant.enrollment_token}}
+                </td>
+                <td>
                     {{participant.birth_year}}
                 </td>
+                <td><a data-toggle='modal' data-target="#send-sms-modal" class='btn sms-btn'>{{participant.user.contactinformation.phone_e164 }}</a></td>
                 <td>{% if participant.is_active %}
                         <img src="{% static 'admin/img/icon-yes.svg' %}" />
                     {% else %}
@@ -68,34 +80,38 @@
                     <img src="{% static 'admin/img/icon-no.svg' %}" />
                     {% endif %}
                 </td>
+                <td>{% if participant.fitbit_authorized %}
+                        <img src="{% static 'admin/img/icon-yes.svg' %}" />
+                    {% else %}
+                        <img src="{% static 'admin/img/icon-no.svg' %}" />
+                    {% endif %}
+                </td>
+                <td>
+                    {{ participant.fitbit_first_updated|date }}
+                </td>
+                <td>
+                    {{ participant.fitbit_last_updated|date }}
+                </td>
                 <td {% if participant.adherence_install_app > 0 %}
                         class='adherence-issue'
                     {% endif %}>
                     {{participant.wore_fitbit_days}}
                 </td>
-                <td>{% if participant.fitbit_authorized %}
-                        {{ participant.fitbit_authorized_date|date }}
-                    {% else %}
-                        <img src="{% static 'admin/img/icon-no.svg' %}" />
-                    {% endif %}
+                <td>
+                    <!-- Is app installed -->
                 </td>
-                <td>{% if participant.watch_app_installed %}
+                <td>
+                    {{ participant.last_page_view|date }}
+                </td>
+                <td>
+                    {% if participant.watch_app_installed %}
                         {{ participant.watch_app_installed_date|date }}
-                    {% else %}
-                        <img src="{% static 'admin/img/icon-no.svg' %}" />
                     {% endif %}
                 </td>
                 <td>
                     {{ participant.last_watch_app_data|date }}
                 </td>
-                <td>
-                    {{ participant.last_fitbit_sync|date }}
-                </td>
-                <td>
-                    {{ participant.last_page_view|date }}
-                </td>
                 {% endtimezone %}
-                <td><a data-toggle='modal' data-target="#send-sms-modal" class='btn sms-btn'>{{participant.user.contactinformation.phone_e164 }}</a></td>
             </tr>
             {% endfor %}
         </tbody>
