--- a/server/dashboard/templates/dashboard/index.html
+++ b/server/dashboard/templates/dashboard/index.html
@@ -33,26 +33,20 @@
     <table class='table table-striped table-bordered table-hover'>
         <thead class="thead-dark">
             <tr>
-                <th colspan="6">Participant</td>
-                <th colspan="4">Fitbit</td>
-                <th colspan="2">Mobile App</th>
-                <th colspan="2">Watch App</th>
-            </tr>
-            <tr>
-                <th scope='col'>ID</th>
-                <th scope='col'>Token</th>
+                <th scope="col">ID</th>
+                <th scope="col">Token</th>
                 <th scope="col">Birth Year</th>
-                <th scope='col'>Phone</th>
-                <th scope='col'>Active</th>
-                <th scope='col'>Joined</th>
-                <th scope='col'>Fitbit Authorized</th>
+                <th scope="col">Phone</th>
+                <th scope="col">Active</th>
+                <th scope="col">Joined</th>
+                <th scope="col">Fitbit Authorized</th>
                 <th scope="col">Fitbit First Update</th>
-                <th scope='col'>Fitbit Last Update</th>
-                <th scope='col'>Fitbit Days Worn</th>
-                <th scope="col">Installed</th>
-                <th scope='col'>Last Page View</th>
-                <th scope='col'>Installed</th>
-                <th scope='col'>Last Update</th>
+                <th scope="col">Fitbit Last Update</th>
+                <th scope="col">Fitbit Days Worn</th>
+                <th scope="col">Mobile App Installed</th>
+                <th scope="col">Last Page View</th>
+                <th scope="col">Watch App Installed</th>
+                <th scope="col">Last Update</th>
             </tr>
         </thead>
         <tbody>
