--- a/client/src/pages/home/home.scss
+++ b/client/src/pages/home/home.scss
@@ -4,7 +4,9 @@ page-home {
     padding: 0px;
     overflow: hidden;
 
-    > * {
+    > *,
+    &:before,
+    &:after {
         width: 100%;
     }
 
@@ -12,6 +14,10 @@ page-home {
         flex-grow: 1;
         height: 0px;
         padding: 0em;
+        background-color: $background-alternate;
+    }
+
+    &:after {
         background-color: $background-alternate;
     }
 
