--- a/client/src/infrastructure/components/stepper.component.scss
+++ b/client/src/infrastructure/components/stepper.component.scss
@@ -10,10 +10,11 @@ heartsteps-stepper {
 
     > header {
         border-width: 0px;
+        padding-top: 1em;
     }
 
     > header > .back {
-        top: 0px;
+        top: 1em;
     }
 
     .pagination-bullets {
