--- a/client/src/pages/weekly-survey/next-week-plans.component.html
+++ b/client/src/pages/weekly-survey/next-week-plans.component.html
@@ -1,2 +1,2 @@
 <heartsteps-weekly-plan [week]="nextWeek"></heartsteps-weekly-plan>
-<button (click)="nextPage()">Complete</button>
+<button class="heartsteps-primary-button" (click)="nextPage()">Complete</button>
