--- a/client/src/theme/start-screen.scss
+++ b/client/src/theme/start-screen.scss
@@ -61,6 +61,17 @@
         }
     }
 
+    .heartsteps-primary-button {
+        background-color: $color-white;
+        color: $color-primary;
+
+        &:hover,
+        &:focus {
+            box-shadow: inset 0 0 0.5em 0px $color-primary;
+        }
+
+    }
+
     .heartsteps-checkmark-button {
         border-color: $color-white;
         &:before {
