--- a/server/dashboard/templates/dashboard/index.html
+++ b/server/dashboard/templates/dashboard/index.html
@@ -51,7 +51,8 @@
     <table class='table table-striped table-bordered table-hover'>
         <thead class="thead-dark">
             <tr>
-                <th scope="col" class='study_btn'>ID</th>
+                <th scope="col" class='study_btn' data-toggle='tooltip' data-placement='bottom'
+                    title='Click to view study details'>ID</th>
                 <th scope="col" data-toggle='tooltip' data-placement='bottom'
                     title='Click to text the participant'>
                     Phone
