Fix login to dashboard

--- a/server/dashboard/templates/dashboard/login.html
+++ b/server/dashboard/templates/dashboard/login.html
@@ -22,6 +22,10 @@
     {% endif %}
 
   <h2>Login</h2>
+  <br />
+  <p>Please use your HeartSteps credentials to access the dashboard</p>
+  <br />
+  <br />
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
