--- a/server/dashboard/templates/dashboard/index.html
+++ b/server/dashboard/templates/dashboard/index.html
@@ -57,6 +57,10 @@
                     title='Click to text the participant'>
                     Phone
                 </th>
+                <th scope='col' data-toggle='tooltip' data-placement='bottom'
+                    title='Date of last text message sent by server'>
+                    Last Text Message
+                </th>
                 <th scope="col" data-toggle='tooltip' data-placement='bottom'
                     title='Date server account was created'>
                     Account Created
@@ -113,6 +117,7 @@
                         {{participant.phone_number }}
                     </a>
                 </td>
+                <td>{{ participant.last_text_sent|date }}</td>
                 <td>{{ participant.date_joined|date }}</td>
                 <td>{% if participant.fitbit_authorized %}
                         <img src="{% static 'admin/img/icon-yes.svg' %}" />
