#86 Add client side of barriers

--- a/client/src/infrastructure/form/text-field.component.html
+++ b/client/src/infrastructure/form/text-field.component.html
@@ -6,3 +6,8 @@
     (ngModelChange)="onChange($event)"
     (focus)="isFocused()"
     (blur)="isBlurred()" />
+<p *ngIf="error && isInvalid"
+    class="error"
+    >
+    {{error}}
+</p>
