#60 Make client dismiss notification if rating notification fails

--- a/client/src/pages/notifications/notification.page.scss
+++ b/client/src/pages/notifications/notification.page.scss
@@ -19,6 +19,7 @@ heartsteps-notification-page {
             height: 3em;
             overflow: hidden;
             position: relative;
+            margin: 0px;
 
             > input[type=radio],
             > input[type=radio]:checked {
