Start screen buttons just white text on primary

--- a/client/src/heartsteps/daily-summaries/daily-activities-update.scss
+++ b/client/src/heartsteps/daily-summaries/daily-activities-update.scss
@@ -1,6 +1,7 @@
 heartsteps-activity-daily-update {
 
     > button {
+        @extend .heartsteps-minor-button;
         margin-bottom: 0.5em;
     }
 
