Update language used in onboarding

--- a/client/src/heartsteps/fitbit-watch/watch-setup.component.html
+++ b/client/src/heartsteps/fitbit-watch/watch-setup.component.html
@@ -1,4 +1,5 @@
-<p>Let's set up your Fitbit watch with the Heartsteps clockface!</p>
-<button (click)="openFitbitPage()">Install clockface</button>
-<p>Once the clock face is installed, follow the steps on the clockface to authenticate your watch with heartsteps. When you have setup your watch, click done below.</p>
+<p>HeartSteps requires the HeartSteps clock face to be setup to send real-time activity suggestions.</p>
+<p>To install the HeartSteps clock face, click the button below and follow the steps on the clock face to authenticate with HeartSteps.</p>
+<button (click)="openFitbitPage()" class="heartsteps-primary-button">Install Clock Face</button>
+<p>When you have setup your watch, click done below.</p>
 <button (click)="markDone()">Done</button>
