--- a/client/src/heartsteps/notifications/notification-permission.component.html
+++ b/client/src/heartsteps/notifications/notification-permission.component.html
@@ -1,3 +1,4 @@
-<p>Allow notifications so HeartSteps can send you activity suggestions and reminders.</p>
-<button (click)="getPermission()">Enable</button>
+<p>HeartSteps will send you activity suggestions and other messages to help you be more active.</p>
+<p>Notifications must be enabled for HeartSteps to send messages to your phone.</p>
+<button (click)="getPermission()" class="heartsteps-primary-button">Enable</button>
 <button class="minor" (click)="skip()">Skip</button>
