--- a/server/dashboard/templates/dashboard_sms/sendsms_form.html
+++ b/server/dashboard/templates/dashboard_sms/sendsms_form.html
@@ -15,7 +15,7 @@
     <div class='modal-body'>
         {% csrf_token %}
         <div class='form-group'>
-            {% for field in form %}
+            {% for field in sms_form %}
                 <div class="fieldWrapper">
                     {{ field.errors }}
                     {{ field.label_tag }} {{ field }}
