--- a/server/dashboard/templates/dashboard_sms/texthistory_form.html
+++ b/server/dashboard/templates/dashboard_sms/texthistory_form.html
@@ -1,4 +1,4 @@
-<div class='modal fade' id='send-sms-modal' role='dialog'>
+<div class='modal fade' id='text-history-modal' role='dialog'>
     <div class='modal-dialog modal-md'>
         <div class='modal-content'>
 
@@ -15,19 +15,12 @@
     <div class='modal-body'>
         {% csrf_token %}
         <div class='form-group'>
-            {% for field in form %}
+            {% for field in test_history_form %}
                 <div class="fieldWrapper">
                     {{ field.errors }}
                     {{ field.label_tag }} {{ field }}
                 </div>
             {% endfor %}
-        </div>
-    </div>
-    <div class='modal-footer'>
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" value='submit'>Send</button>
-            </div>
         </div>
     </div>
 </form>
